/**
* Frist draft of communication between TRADR-System and third party UAV's.
*
* Version: 0.1.1
*/

syntax = "proto3";
package tradr.uav.api.special;

option java_multiple_files = true;
option java_package = "tradr.uav.api.special";

import "tradr_asset_reg_messages.proto";
import "tradr_asset_status_messages.proto";
import "tradr_task_messages.proto";
import "tradr_camera_messages.proto";

message BRIDGEMsg {

    oneof BRIDGEoneof {
        AssetRegACKMsg regResponse = 1;
        AssetStatusMsg assetStatus = 2;
        MissionMsg mission = 3;
        VideostreamReqMsg videostreamRequest = 4;
    }

}